--- a/src/WeightAndBalance.css
+++ b/src/WeightAndBalance.css
@@ -1,17 +1,25 @@
-#container {
-}
-
-#inputs {
-}
-
 #chart {
   width: 100%;
   height: 350px;
   font-size: x-small;
 }
 
-#table {
+@media only screen and (min-width: 680px) {
+  #container {
+  }
 
+  #inputs {
+    width: 45%;
+    float: left;
+    margin-left: 30px;
+  }
+
+  #chart {
+    width: 45%;
+    max-width: 700px;
+    float: right;
+    margin-right: 30px;
+  }
 }
 
 @media only screen and (max-width: 500px) {
