--- a/src/WeightAndBalance.css
+++ b/src/WeightAndBalance.css
@@ -5,9 +5,6 @@
 }
 
 @media only screen and (min-width: 680px) {
-  #container {
-  }
-
   #inputs {
     width: 45%;
     float: left;
@@ -19,6 +16,10 @@
     max-width: 700px;
     float: right;
     margin-right: 30px;
+  }
+
+  #table {
+    padding: 0px 30px 0px 30px;
   }
 }
 
