--- a/src/WeightAndBalance.css
+++ b/src/WeightAndBalance.css
@@ -5,22 +5,36 @@
 }
 
 @media only screen and (min-width: 680px) {
+  #wrapper {
+    max-width: 1200px;
+    margin: auto;
+  }
+
   #inputs {
     width: 45%;
     float: left;
     margin-left: 30px;
+    max-width: 600px;
   }
 
   #chart {
     width: 45%;
     max-width: 700px;
-    float: right;
-    margin-right: 30px;
+    float: left;
+    margin-left: 30px;
   }
 
   #table {
     padding: 0px 30px 0px 30px;
+    width: 100%;
   }
+}
+
+#table .exceeded {
+  background-color: #f44336;
+  transition-property: background-color;
+  transition-duration: 1s;
+  transition-timing-function: ease;
 }
 
 @media only screen and (max-width: 500px) {
